# mathfun-rs

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
bench/: Cargo.toml
benches/: bench.rs
src/: binary.rs  lib.rs  unary.rs
src/simd/: aarch64.rs  mod.rs  wasm32.rs  x86.rs  x86_64.rs
