[package]
name = "mathfun"
version = "0.1.1"
edition = "2021"
authors = ["mert-kurttutan"]
description = "high-performance math functions"
readme = "./README.md"
license = "MIT"
keywords = ["high-performance", "math"]
repository = "https://github.com/mert-kurttutan/mathfun-rs"
rust-version = "1.65"

[dependencies]
once_cell = "1.20.2"
raw-cpuid = "11.3.0"

[features]
default = ["std"]
std = []
