[package]
name = "mathfun"
version = "0.2.0"
edition = "2021"
authors = ["mert-kurttutan"]
description = "high-performance math functions"
readme = "./README.md"
license = "MIT"
keywords = ["high-performance", "math"]
repository = "https://github.com/mert-kurttutan/mathfun-rs"
rust-version = "1.65"

[dependencies]
once_cell = "1.20.2"

[target.'cfg(target_arch = "x86")'.dependencies]
raw-cpuid = "11.3"

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "11.3"

[features]
default = ["std"]
std = []
