[package]
name = "mathfun"
version = "0.2.1"
edition = "2021"
authors = ["mert-kurttutan"]
description = "high-performance math functions"
readme = "./README.md"
license = "MIT"
keywords = ["high-performance", "math"]
repository = "https://github.com/mert-kurttutan/mathfun-rs"
rust-version = "1.65"

[dependencies]
once_cell = "1.20.3"

[target.'cfg(target_arch = "x86")'.dependencies]
raw-cpuid = "11.4"

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "11.4"

[features]
default = ["std"]
std = []
